--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "keymirror": "^0.1.1",
+    "prop-types": "^15.6.2",
     "warning": "^3.0.0"
   },
   "devDependencies": {
